# application-window-mask

./: .gitignore  ACCESSIBILITY_RESEARCH.md  ARCHITECTURE.md  OBS_MASK_TIMING_RESEARCH.md  README.md  TESTING.md
classifier/: README.md
cli/: pii
config/: README.md  config.toml
daemon/: README.md
daemon/daemon_python/: classifier.py  main.py  scene_model.py  shm_writer.py  window_poller.py
daemon/daemon_swift/: Package.swift
daemon/daemon_swift/Sources/CSeqlock/: seqlock.c
daemon/daemon_swift/Sources/CSeqlock/include/: seqlock.h
daemon/daemon_swift/Sources/PiiMaskDaemon/: Classifier.swift  ConfigLoader.swift  EventMonitor.swift  Occlusion.swift  SceneModel.swift  ShmWriter.swift  WindowPoller.swift  main.swift
daemon/daemon_swift/Tests/PiiMaskDaemonTests/: ClassifierTests.swift  OcclusionTests.swift
failsafe/: README.md
lib/: config_loader.py  occlusion.py  test_classifier.py  test_occlusion.py
plugin/: README.md
plugin/plugin_c/: CMakeLists.txt  blur_kawase.c  blur_kawase.h  mask_renderer.c  mask_renderer.h  pii_mask_filter.c  rect_texture.c  rect_texture.h  shm_reader.c  shm_reader.h
plugin/plugin_c/data/: dual_kawase_down.effect  dual_kawase_up.effect  pii_composite.effect  pixelate.effect
protocol/: README.md  pii_mask_protocol_c.h  pii_mask_protocol_python.py  pii_mask_protocol_rust.rs  pii_mask_protocol_swift.swift
research/: EXISTING_IMPLEMENTATIONS.md  obs-ubt.1-plugin-scaffold.md  obs-ubt.2-sdf-shader.md  obs-ubt.3-ipc-bridge.md  obs-ubt.4-window-daemon.md  obs-ubt.5-classifier.md  obs-ubt.6-talon-shim.md  obs-ubt.7-fail-safes.md  obs-ubt.8-overlay-detection.md
shader/: README.md
talon_shim/: README.md
